extract relevant info in each conv from the corpus

--- a/SupportSystem.ipynb
+++ b/SupportSystem.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,460 @@
     "\n",
     "with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
     "    dataset = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Experience Type</th>\n",
+       "      <th>Emotion Type</th>\n",
+       "      <th>Problem Type</th>\n",
+       "      <th>Situation</th>\n",
+       "      <th>Dialog Length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Previous Experience</td>\n",
+       "      <td>anxiety</td>\n",
+       "      <td>job crisis</td>\n",
+       "      <td>I hate my job but I am scared to quit and seek...</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Current Experience</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>problems with friends</td>\n",
+       "      <td>I have complete unsupportive friends its to th...</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Current Experience</td>\n",
+       "      <td>fear</td>\n",
+       "      <td>job crisis</td>\n",
+       "      <td>I have been out of work for five weeks in quar...</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Current Experience</td>\n",
+       "      <td>depression</td>\n",
+       "      <td>ongoing depression</td>\n",
+       "      <td>I am depressed staying home due to COVID</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Current Experience</td>\n",
+       "      <td>depression</td>\n",
+       "      <td>breakup with partner</td>\n",
+       "      <td>I found out that my boyfriend had been lying t...</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1295</th>\n",
+       "      <td>Previous Experience</td>\n",
+       "      <td>anxiety</td>\n",
+       "      <td>Sleep Problems</td>\n",
+       "      <td>Growing up with a drunk father and having him ...</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>Current Experience</td>\n",
+       "      <td>depression</td>\n",
+       "      <td>job crisis</td>\n",
+       "      <td>Lost my job in the lockdown</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1297</th>\n",
+       "      <td>Current Experience</td>\n",
+       "      <td>shame</td>\n",
+       "      <td>academic pressure</td>\n",
+       "      <td>I failed a few of my midterms and now I'm very...</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>Current Experience</td>\n",
+       "      <td>sadness</td>\n",
+       "      <td>problems with friends</td>\n",
+       "      <td>I have accepted a new job and my work friends ...</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1299</th>\n",
+       "      <td>Previous Experience</td>\n",
+       "      <td>disgust</td>\n",
+       "      <td>problems with friends</td>\n",
+       "      <td>It is not well to do better information for ga...</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1300 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Experience Type Emotion Type           Problem Type  \\\n",
+       "0     Previous Experience      anxiety             job crisis   \n",
+       "1      Current Experience        anger  problems with friends   \n",
+       "2      Current Experience         fear             job crisis   \n",
+       "3      Current Experience   depression     ongoing depression   \n",
+       "4      Current Experience   depression   breakup with partner   \n",
+       "...                   ...          ...                    ...   \n",
+       "1295  Previous Experience      anxiety         Sleep Problems   \n",
+       "1296   Current Experience   depression             job crisis   \n",
+       "1297   Current Experience        shame      academic pressure   \n",
+       "1298   Current Experience      sadness  problems with friends   \n",
+       "1299  Previous Experience      disgust  problems with friends   \n",
+       "\n",
+       "                                              Situation  Dialog Length  \n",
+       "0     I hate my job but I am scared to quit and seek...             27  \n",
+       "1     I have complete unsupportive friends its to th...             69  \n",
+       "2     I have been out of work for five weeks in quar...             37  \n",
+       "3              I am depressed staying home due to COVID             24  \n",
+       "4     I found out that my boyfriend had been lying t...             74  \n",
+       "...                                                 ...            ...  \n",
+       "1295  Growing up with a drunk father and having him ...             27  \n",
+       "1296                        Lost my job in the lockdown             35  \n",
+       "1297  I failed a few of my midterms and now I'm very...             23  \n",
+       "1298  I have accepted a new job and my work friends ...             28  \n",
+       "1299  It is not well to do better information for ga...             22  \n",
+       "\n",
+       "[1300 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Extract relevant information from the corpus\n",
+    "corpus_data = []\n",
+    "for corpus in dataset:\n",
+    "    experience_type = corpus['experience_type']\n",
+    "    emotion_type = corpus['emotion_type']\n",
+    "    problem_type = corpus['problem_type']\n",
+    "    situation = corpus['situation']\n",
+    "    dialog_length = len(corpus['dialog'])\n",
+    "    corpus_data.append([experience_type, emotion_type, problem_type, situation, dialog_length])\n",
+    "\n",
+    "df = pd.DataFrame(corpus_data, columns=['Experience Type', 'Emotion Type', 'Problem Type', 'Situation', 'Dialog Length'])\n",
+    "\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dialog Length</th>\n",
+       "      <th>Word Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27</td>\n",
+       "      <td>407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>69</td>\n",
+       "      <td>830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24</td>\n",
+       "      <td>323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>74</td>\n",
+       "      <td>915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1295</th>\n",
+       "      <td>27</td>\n",
+       "      <td>293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>35</td>\n",
+       "      <td>498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1297</th>\n",
+       "      <td>23</td>\n",
+       "      <td>210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1298</th>\n",
+       "      <td>28</td>\n",
+       "      <td>385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1299</th>\n",
+       "      <td>22</td>\n",
+       "      <td>501</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1300 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Dialog Length  Word Count\n",
+       "0                27         407\n",
+       "1                69         830\n",
+       "2                37         988\n",
+       "3                24         323\n",
+       "4                74         915\n",
+       "...             ...         ...\n",
+       "1295             27         293\n",
+       "1296             35         498\n",
+       "1297             23         210\n",
+       "1298             28         385\n",
+       "1299             22         501\n",
+       "\n",
+       "[1300 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract the number of words in each conversation\n",
+    "corpus_data = []\n",
+    "for corpus in dataset:\n",
+    "    dialog_length = len(corpus['dialog'])\n",
+    "    word_count = sum(len(dialog['content'].split()) for dialog in corpus['dialog'])\n",
+    "    corpus_data.append([dialog_length, word_count])\n",
+    "\n",
+    "df = pd.DataFrame(corpus_data, columns=['Dialog Length', 'Word Count'])\n",
+    "df\n",
+    "# Dialog length is the number of individual dialogues or exchanges that occur within a conversation. \n",
+    "# Word count is the total number of words used in the conversation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1300.000000\n",
+       "mean      483.892308\n",
+       "std       185.946020\n",
+       "min       133.000000\n",
+       "25%       361.750000\n",
+       "50%       453.000000\n",
+       "75%       573.000000\n",
+       "max      1895.000000\n",
+       "Name: Word Count, dtype: float64"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary_stats = df['Word Count'].describe()\n",
+    "summary_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dialog Length</th>\n",
+       "      <th>Word Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>120</td>\n",
+       "      <td>1895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>842</th>\n",
+       "      <td>72</td>\n",
+       "      <td>1846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>614</th>\n",
+       "      <td>81</td>\n",
+       "      <td>1582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>980</th>\n",
+       "      <td>99</td>\n",
+       "      <td>1549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>574</th>\n",
+       "      <td>42</td>\n",
+       "      <td>1336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>520</th>\n",
+       "      <td>20</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>601</th>\n",
+       "      <td>16</td>\n",
+       "      <td>174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>25</td>\n",
+       "      <td>155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>700</th>\n",
+       "      <td>19</td>\n",
+       "      <td>147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>16</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1300 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Dialog Length  Word Count\n",
+       "293            120        1895\n",
+       "842             72        1846\n",
+       "614             81        1582\n",
+       "980             99        1549\n",
+       "574             42        1336\n",
+       "..             ...         ...\n",
+       "520             20         176\n",
+       "601             16         174\n",
+       "395             25         155\n",
+       "700             19         147\n",
+       "67              16         133\n",
+       "\n",
+       "[1300 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sorted = df.sort_values(by='Word Count', ascending=False)\n",
+    "df_sorted"
    ]
   },
   {
