--- a/Emotion Detection - NLP with very simple approach.ipynb
+++ b/Emotion Detection - NLP with very simple approach.ipynb
@@ -1961,7 +1961,21 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sharp\n",
+    "\n",
+    "podzielic dialog 80:20 predict na 80 test na 20, znalezc key words, prediction for future\n",
+    "    \n",
+    "bazować na slowach/wyrazeniach kluczach (znalezc artykul gdzie to bylo), ktore moga swiadczyc o problemach psychicznych\n",
+    "\n",
+    "slowa opatrzec w kontekst\n",
+    "\n",
+    "(emo2vec)\n",
+    "\n",
+    "i na tej podstawie sklasyfikowac\n",
+    "\n",
+    "przetestowac rozne klasyfikaotory"
+   ]
   }
  ],
  "metadata": {
