--- a/Emotion Detection - NLP with very simple approach.ipynb
+++ b/Emotion Detection - NLP with very simple approach.ipynb
@@ -1964,7 +1964,8 @@
    "source": [
     "sharp\n",
     "\n",
-    "podzielic dialog 80:20 predict na 80 test na 20, znalezc key words, prediction for future\n",
+    "Done: na chama podzieliłam wg zasady         split_index = int(0.8 * len(seeker_dialog))\n",
+    "        podzielic dialog 80:20 predict na 80 test na 20, znalezc key words, prediction for future\n",
     "    \n",
     "bazować na slowach/wyrazeniach kluczach (znalezc artykul gdzie to bylo), ktore moga swiadczyc o problemach psychicznych\n",
     "\n",
@@ -1994,7 +1995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
